--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "immutability-helper": "^3.1.1",
+    "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-rnd": "^10.3.7",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
-    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
