--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "framer-motion": "^9.0.2",
     "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
@@ -20,6 +21,7 @@
     "react-quill": "^2.0.0",
     "react-rnd": "^10.3.7",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
